# LearningProjects

./: README.md
C++_Concepts/: .gitignore
C++_Concepts/Basics/: AtomicsVSMutex.cpp  ConcurencyPrimitivesDemo.cpp  SocketDemo.cpp
C++_Concepts/Basics/Polymorphism/: README.md
C++_Concepts/CalculatorGTest/: CMakeLists.txt  README.md  build.sh
C++_Concepts/CalculatorGTest/src/: calculator.cpp  calculator.hpp  main.cpp
C++_Concepts/CalculatorGTest/tests/: test_calculator.cpp
C++_Concepts/DesignPatterns/CanBusDriver_Singleton/: CMakeLists.txt  README.md  build.sh
C++_Concepts/DesignPatterns/CanBusDriver_Singleton/include/: CanBusDriver_Singleton.hpp
C++_Concepts/DesignPatterns/CanBusDriver_Singleton/src/: CanBusDriver_Singleton.cpp  main.cpp
C++_Concepts/DesignPatterns/HeadLightDiag_SCandObserver/: CMakeLists.txt  README.md
C++_Concepts/DesignPatterns/HeadLightDiag_SCandObserver/include/: HeadLightSimulation.hpp
C++_Concepts/DesignPatterns/HeadLightDiag_SCandObserver/src/: HeadLightSimulation.cpp  Icommand.cpp
C++_Concepts/DesignPatterns/HeadLightsim_StateAndCommand/: CMakeLists.txt  README.md
C++_Concepts/DesignPatterns/HeadLightsim_StateAndCommand/include/: HeadLightSimulation.hpp
C++_Concepts/DesignPatterns/HeadLightsim_StateAndCommand/src/: HeadLightSimulation.cpp
C++_Concepts/DesignPatterns/HeadlightDiag/: build.sh
C++_Concepts/DesignPatterns/HeadlightDiag/include/: Icommand.hpp
C++_Concepts/DesignPatterns/HeadlightDiag/src/: main.cpp
C++_Concepts/DesignPatterns/HeadlightSimulation/: build.sh
C++_Concepts/DesignPatterns/HeadlightSimulation/include/: Icommand.hpp
C++_Concepts/DesignPatterns/HeadlightSimulation/src/: Icommand.cpp  main.cpp
C++_Concepts/DesignPatterns/StaticFactory/: CMakeLists.txt  README.md  build.sh
C++_Concepts/DesignPatterns/StaticFactory/include/: StaticFactory.hpp
C++_Concepts/DesignPatterns/StaticFactory/src/: StaticFactory.cpp
C++_Concepts/Polymorphism/: CMakeLists.txt  build.sh
C++_Concepts/Polymorphism/include/: PolymorphismDemo.hpp
C++_Concepts/Polymorphism/src/: PolymorphismDemo.cpp
C++_Concepts/RAII/: CMakeLists.txt  README.md  build.sh
C++_Concepts/RAII/include/: RAIIdemo.hpp
C++_Concepts/RAII/src/: RAIIdemo.cpp
C++_Concepts/STL/: README.md
C++_Concepts/STL/Algorithms/: Inspecting.cpp  Modifying.cpp  Searching.cpp  Sorting_and_partitioning.cpp
C++_Concepts/STL/Containers/: Deque.cpp  List.cpp  Map.cpp  Priority_queue.cpp  Queue.cpp  Set.cpp  Stack.cpp  Unordered_map.cpp  Vector.cpp
C++_Concepts/STL/Iterators/: Iterators.cpp
data-logger/: CMakeList.txt
